* map02: Kakteen hinzugefügt
* map02: Tretminen hinzugefügt
* Global: Im angezeigten Punktestand werden die Punkte aus den anderen Maps jetzt mit einberechnet
* UI: Separater Lautstärkeregler für Atmo-Sounds

## Alpha 014 (Unreleased)

* Global: Äpfel hinzugefügt
* Global: "Beep" Soundeffekt ersetzt
* Global: Support für Rii USB Classic Controller wieder entfernt

## Global: Alpha 013 (24.12.2024)

* map02: Puzzle mit Strom-Hindernis hinzugefügt
* map02: kann jetzt durchgespielt werden
* map03: hinzugefügt
* Global: Gegner KI verbessert
* UI: Bloody Screen Effekt hinzugefügt
* UI: Menüpunkt "Online-Bestenliste" hinzugefügt
* UI: Unnötige Grafikeinstellungen entfernt
* UI: Neue Hauptmenü Musik
* UI: Ladebildschirm Musik hinzugefügt
* UI: Lautstärke-Regler zu Audioeinstellungen hinzugefügt

## Alpha 012 (17.05.2024)

* map01: Autos kollidieren nicht mehr nach einiger Spielzeit
* map02: Hühner sterben jetzt, wenn sie von einem Auto überfahren werden
* map02: Kettensäge und Bäume hinzugefügt
* map02: Strom-Hindernis hinzugefügt
* map02: Neuer Musik-Track hinzugefügt
* map02: Atmosphären Sound hinzugefügt
* map02: Enten hinzugefügt
* map02: Himmel animiert
* Global: Ausdauer hinzugefügt
* Global: Wenn Hühner sterben, werden sie durch eine Feder ersetzt
* Global: Fußschritte Sound-Effekt hinzugefügt
* Global: Punktestand für das aktuelle Level wird angezeigt
* Global Mehrfach im Inventar befindliche Gegenstände können jetzt korrekt gedroppt werden
* UI: Nach einem Game Over wird das aktuelle Level neu gestartet
* UI: FPS Graph durch FPS Text ersetzt
* UI: Grafik-Einstellungen erweitert
* UI: Ambient Musik zum Pausenmenü hinzugefügt
* UI: Intro-Videos können nun, auch wenn der Ladevorgang noch nicht fertig ist, übersprungen werden
* UI: Ladebildschirm überarbeitet
* Performance: Kollisionsabfragen optimiert
* Performance: Geschosse werden 3 Sekunden nach dem Schuss aus der Szene entfernt

## Alpha 011 (Unreleased)
